--- a/NOVAxis/NOVAxis.csproj
+++ b/NOVAxis/NOVAxis.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AudioModuleService.cs" />
+    <Compile Include="TypeReaders\AudioModuleTypeReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
