--- a/NOVAxis/NOVAxis.csproj
+++ b/NOVAxis/NOVAxis.csproj
@@ -74,6 +74,7 @@
     <Reference Include="Microsoft.Win32.Primitives, Version=4.0.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Win32.Primitives.4.3.0\lib\net46\Microsoft.Win32.Primitives.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.Data, Version=8.0.19.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -165,11 +166,13 @@
     <Compile Include="Preconditions\RequireRoleAttribute.cs" />
     <Compile Include="ProgramConfig.cs" />
     <Compile Include="ProgramLog.cs" />
+    <Compile Include="Services\DatabaseService.cs" />
     <Compile Include="Services\LavalinkService.cs" />
     <Compile Include="ProgramCommand.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AudioModuleService.cs" />
+    <Compile Include="Services\PrefixService.cs" />
     <Compile Include="TypeReaders\AudioModuleTypeReader.cs" />
   </ItemGroup>
   <ItemGroup>
