Use latest SharpLink source instead of pre-release NuGet package

--- a/NOVAxis/NOVAxis.csproj
+++ b/NOVAxis/NOVAxis.csproj
@@ -55,7 +55,6 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.9" />
     <PackageReference Include="MySql.Data" Version="8.0.22" />
-    <PackageReference Include="SharpLink" Version="1.0.0-beta-0005" />
     <PackageReference Include="System.ComponentModel.Composition" Version="4.7.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
@@ -116,5 +115,8 @@
     <PackageReference Include="System.Threading.Timer" Version="4.3.0" />
     <PackageReference Include="System.Xml.ReaderWriter" Version="4.3.1" />
     <PackageReference Include="System.Xml.XDocument" Version="4.3.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SharpLink\SharpLink.csproj" />
   </ItemGroup>
 </Project>
