--- a/NOVAxis/NOVAxis.csproj
+++ b/NOVAxis/NOVAxis.csproj
@@ -51,7 +51,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Discord.Addons.Interactive" Version="2.0.0" />
+    <PackageReference Include="Discord.InteractivityAddon" Version="2.1.1" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.9" />
     <PackageReference Include="MySql.Data" Version="8.0.22" />
