--- a/.gitignore
+++ b/.gitignore
@@ -260,7 +260,9 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+# Configuration files
 /NOVAxis/config.json
 
 # Lavalink
-Lavalink.jar
+/NOVAxis/Lavalink/**
