Let Discord decide how many shards are needed

--- a/NOVAxis/config-example.json
+++ b/NOVAxis/config-example.json
@@ -1,6 +1,6 @@
 {
   "LoginToken": "INSERT_LOGINTOKEN_HERE",
-  "TotalShards": 1,
+  "TotalShards": null,
   "Interaction": {
     "DefaultPrefix": "~",
     "Commands": {
