--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,9 +6,13 @@ on:
       - v*
 
 jobs:
-  create_release:
-    name: Create Release
+  compile:
+    uses: ./.github/workflows/compile.yml
+
+  publish_github:
+    name: Create Release on GitHub
     runs-on: ubuntu-latest
+    needs: [compile]
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
@@ -22,3 +26,31 @@ jobs:
           release_name: ${{ github.ref }}
           draft: false
           prerelease: false
+          
+  publish_docker:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: [compile]
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: novosadkry/novaxis
+      
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
