--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -12,6 +12,7 @@ jobs:
         configuration: [Debug, Release]
         os: [ubuntu-latest, windows-latest]
     
+    name: Build and Test
     runs-on: ${{ matrix.os }}
 
     steps:
