--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
       - v*
+  release:
 
 jobs:
   compile:
@@ -13,6 +14,7 @@ jobs:
     name: Create Release on GitHub
     runs-on: ubuntu-latest
     needs: [compile]
+    if: ${{ github.event_name != 'release' }}
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
