Implement VoteModule module

--- a/NOVAxis/config-example.json
+++ b/NOVAxis/config-example.json
@@ -31,6 +31,7 @@
     "DbName": "novaxis"
   },
   "Audio": {
+    "Active": true,
     "SelfDeaf": true,
     "Lavalink": {
       "Host": "localhost",
