--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,8 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
         
       - name: Create a new release
         uses: actions/create-release@v1
@@ -43,6 +45,8 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
       
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
